tons of optimizations (thanks to JustAHuman-xD and casperwtf)